// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OasMappedOperation requestBodySchema should have access to the requestBody for mediaType 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "addresses": {
      "items": {
        "properties": {
          "city": {
            "description": "Name of city.",
            "example": "San Francisco",
            "nullable": true,
            "type": "string",
          },
          "country": {
            "description": "country code according to ISO 3166-1 alpha-2.",
            "example": "US",
            "nullable": true,
            "type": "string",
          },
          "id": {
            "example": "123",
            "nullable": true,
            "type": "string",
          },
          "latitude": {
            "example": "40.759211",
            "nullable": true,
            "type": "string",
          },
          "line1": {
            "description": "Line 1 of the address e.g. number, street, suite, apt #, etc.",
            "example": "Main street",
            "nullable": true,
            "type": "string",
          },
          "line2": {
            "description": "Line 2 of the address",
            "example": "apt #",
            "nullable": true,
            "type": "string",
          },
          "longitude": {
            "example": "-73.984638",
            "nullable": true,
            "type": "string",
          },
          "name": {
            "example": "HQ US",
            "nullable": true,
            "type": "string",
          },
          "postal_code": {
            "description": "Zip code or equivalent.",
            "example": "94104",
            "nullable": true,
            "type": "string",
          },
          "state": {
            "description": "Name of state",
            "example": "CA",
            "nullable": true,
            "type": "string",
          },
          "type": {
            "enum": [
              "primary",
              "secondary",
              "home",
              "office",
              "shipping",
              "billing",
              "other",
            ],
            "example": "primary",
            "type": "string",
            "x-graphql-type-name": "AddressType",
          },
        },
        "type": "object",
      },
      "type": "array",
    },
    "bank_accounts": {
      "items": {
        "properties": {
          "bic": {
            "example": "AUDSCHGGXXX",
            "nullable": true,
            "type": "string",
          },
          "iban": {
            "example": "CH2989144532982975332",
            "nullable": true,
            "type": "string",
          },
        },
        "type": "object",
      },
      "type": "array",
    },
    "created_at": {
      "example": "2020-09-30T07:43:32.000Z",
      "readOnly": true,
      "type": "string",
    },
    "created_by": {
      "example": "12345",
      "nullable": true,
      "readOnly": true,
      "type": "string",
    },
    "currency": {
      "example": "USD",
      "nullable": true,
      "type": "string",
    },
    "custom_fields": {
      "items": {
        "additionalProperties": false,
        "properties": {
          "id": {
            "example": "custom_technologies",
            "type": "string",
          },
          "value": {
            "anyOf": [
              {
                "example": "Uses Salesforce and Marketo",
                "nullable": true,
                "type": "string",
              },
              {
                "example": 10,
                "nullable": true,
                "type": "number",
              },
              {
                "example": true,
                "nullable": true,
                "type": "boolean",
              },
              {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
            ],
          },
        },
        "required": [
          "id",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "description": {
      "example": "A crm that works for you, so you can spend time on relationships instead of data.",
      "nullable": true,
      "type": "string",
    },
    "emails": {
      "items": {
        "properties": {
          "email": {
            "example": "elon@musk.com",
            "format": "email",
            "minLength": 1,
            "type": "string",
          },
          "id": {
            "example": "123",
            "type": "string",
          },
          "type": {
            "enum": [
              "primary",
              "secondary",
              "work",
              "personal",
              "billing",
              "other",
            ],
            "example": "primary",
            "type": "string",
            "x-graphql-type-name": "EmailType",
          },
        },
        "required": [
          "email",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "fax": {
      "example": "+12129876543",
      "nullable": true,
      "type": "string",
    },
    "id": {
      "example": "12345",
      "readOnly": true,
      "type": "string",
    },
    "image_url": {
      "example": "https://www.spacex.com/static/images/share.jpg",
      "nullable": true,
      "type": "string",
    },
    "interaction_count": {
      "example": 1,
      "nullable": true,
      "readOnly": true,
      "type": "integer",
    },
    "name": {
      "example": "Copper",
      "minLength": 1,
      "type": "string",
    },
    "owner_id": {
      "example": "12345",
      "type": "string",
    },
    "phone_numbers": {
      "items": {
        "properties": {
          "id": {
            "example": "12345",
            "nullable": true,
            "type": "string",
          },
          "number": {
            "example": "111-111-1111",
            "minLength": 1,
            "type": "string",
          },
          "type": {
            "enum": [
              "primary",
              "secondary",
              "home",
              "office",
              "mobile",
              "assistant",
              "fax",
              "other",
            ],
            "example": "primary",
            "type": "string",
            "x-graphql-type-name": "PhoneType",
          },
        },
        "required": [
          "number",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "social_links": {
      "items": {
        "properties": {
          "id": {
            "example": "12345",
            "nullable": true,
            "type": "string",
          },
          "type": {
            "example": "twitter",
            "nullable": true,
            "type": "string",
          },
          "url": {
            "example": "https://www.twitter.com/apideck-io",
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "url",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "status": {
      "example": "Open",
      "minLength": 1,
      "nullable": true,
      "type": "string",
    },
    "tags": {
      "example": [
        "New",
      ],
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "updated_at": {
      "example": "2020-09-30T07:43:32.000Z",
      "readOnly": true,
      "type": "string",
    },
    "updated_by": {
      "example": "12345",
      "nullable": true,
      "readOnly": true,
      "type": "string",
    },
    "vat_number": {
      "description": "VAT number",
      "example": "BE0689615164",
      "nullable": true,
      "type": "string",
    },
    "websites": {
      "items": {
        "properties": {
          "id": {
            "example": "12345",
            "nullable": true,
            "type": "string",
          },
          "type": {
            "enum": [
              "primary",
              "secondary",
              "work",
              "personal",
              "other",
            ],
            "example": "primary",
            "type": "string",
            "x-graphql-type-name": "WebsiteType",
          },
          "url": {
            "example": "http://example.com",
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "url",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`OasMappedOperation should set itself up using operation and params 1`] = `
OasMappedOperation {
  "cookieParams": [],
  "id": "companiesAdd",
  "method": "POST",
  "path": "/crm/companies",
  "pathParams": [],
  "pathRef": "POST::/crm/companies",
  "queryParams": [
    {
      "description": "Include raw response. Mostly used for debugging purposes",
      "in": "query",
      "name": "raw",
      "schema": {
        "default": true,
        "type": "boolean",
      },
    },
  ],
  "requestHeaders": [
    {
      "description": "ID of the consumer which you want to get or push data from",
      "in": "header",
      "name": "x-apideck-consumer-id",
      "required": true,
      "schema": {
        "type": "string",
      },
    },
    {
      "description": "The ID of your Unify application",
      "in": "header",
      "name": "x-apideck-app-id",
      "required": true,
      "schema": {
        "type": "string",
      },
    },
    {
      "description": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
      "in": "header",
      "name": "x-apideck-service-id",
      "schema": {
        "type": "string",
      },
    },
  ],
  "responseCodes": [
    "201",
    "400",
    "401",
    "402",
    "404",
    "422",
    "default",
  ],
  "schema": {
    "description": "Create company",
    "operationId": "companiesAdd",
    "parameters": [
      {
        "description": "Include raw response. Mostly used for debugging purposes",
        "in": "query",
        "name": "raw",
        "schema": {
          "default": true,
          "type": "boolean",
        },
      },
      {
        "description": "ID of the consumer which you want to get or push data from",
        "in": "header",
        "name": "x-apideck-consumer-id",
        "required": true,
        "schema": {
          "type": "string",
        },
      },
      {
        "description": "The ID of your Unify application",
        "in": "header",
        "name": "x-apideck-app-id",
        "required": true,
        "schema": {
          "type": "string",
        },
      },
      {
        "description": "Provide the service id you want to call (e.g., pipedrive). [See the full list in the connector section.](#section/Connectors) Only needed when a consumer has activated multiple integrations for a Unified API.",
        "in": "header",
        "name": "x-apideck-service-id",
        "schema": {
          "type": "string",
        },
      },
    ],
    "requestBody": {
      "content": {
        "application/json": {
          "schema": {
            "additionalProperties": false,
            "properties": {
              "addresses": {
                "items": {
                  "properties": {
                    "city": {
                      "description": "Name of city.",
                      "example": "San Francisco",
                      "nullable": true,
                      "type": "string",
                    },
                    "country": {
                      "description": "country code according to ISO 3166-1 alpha-2.",
                      "example": "US",
                      "nullable": true,
                      "type": "string",
                    },
                    "id": {
                      "example": "123",
                      "nullable": true,
                      "type": "string",
                    },
                    "latitude": {
                      "example": "40.759211",
                      "nullable": true,
                      "type": "string",
                    },
                    "line1": {
                      "description": "Line 1 of the address e.g. number, street, suite, apt #, etc.",
                      "example": "Main street",
                      "nullable": true,
                      "type": "string",
                    },
                    "line2": {
                      "description": "Line 2 of the address",
                      "example": "apt #",
                      "nullable": true,
                      "type": "string",
                    },
                    "longitude": {
                      "example": "-73.984638",
                      "nullable": true,
                      "type": "string",
                    },
                    "name": {
                      "example": "HQ US",
                      "nullable": true,
                      "type": "string",
                    },
                    "postal_code": {
                      "description": "Zip code or equivalent.",
                      "example": "94104",
                      "nullable": true,
                      "type": "string",
                    },
                    "state": {
                      "description": "Name of state",
                      "example": "CA",
                      "nullable": true,
                      "type": "string",
                    },
                    "type": {
                      "enum": [
                        "primary",
                        "secondary",
                        "home",
                        "office",
                        "shipping",
                        "billing",
                        "other",
                      ],
                      "example": "primary",
                      "type": "string",
                      "x-graphql-type-name": "AddressType",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
              "bank_accounts": {
                "items": {
                  "properties": {
                    "bic": {
                      "example": "AUDSCHGGXXX",
                      "nullable": true,
                      "type": "string",
                    },
                    "iban": {
                      "example": "CH2989144532982975332",
                      "nullable": true,
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
              "created_at": {
                "example": "2020-09-30T07:43:32.000Z",
                "readOnly": true,
                "type": "string",
              },
              "created_by": {
                "example": "12345",
                "nullable": true,
                "readOnly": true,
                "type": "string",
              },
              "currency": {
                "example": "USD",
                "nullable": true,
                "type": "string",
              },
              "custom_fields": {
                "items": {
                  "additionalProperties": false,
                  "properties": {
                    "id": {
                      "example": "custom_technologies",
                      "type": "string",
                    },
                    "value": {
                      "anyOf": [
                        {
                          "example": "Uses Salesforce and Marketo",
                          "nullable": true,
                          "type": "string",
                        },
                        {
                          "example": 10,
                          "nullable": true,
                          "type": "number",
                        },
                        {
                          "example": true,
                          "nullable": true,
                          "type": "boolean",
                        },
                        {
                          "items": {
                            "type": "string",
                          },
                          "type": "array",
                        },
                      ],
                    },
                  },
                  "required": [
                    "id",
                  ],
                  "type": "object",
                },
                "type": "array",
              },
              "description": {
                "example": "A crm that works for you, so you can spend time on relationships instead of data.",
                "nullable": true,
                "type": "string",
              },
              "emails": {
                "items": {
                  "properties": {
                    "email": {
                      "example": "elon@musk.com",
                      "format": "email",
                      "minLength": 1,
                      "type": "string",
                    },
                    "id": {
                      "example": "123",
                      "type": "string",
                    },
                    "type": {
                      "enum": [
                        "primary",
                        "secondary",
                        "work",
                        "personal",
                        "billing",
                        "other",
                      ],
                      "example": "primary",
                      "type": "string",
                      "x-graphql-type-name": "EmailType",
                    },
                  },
                  "required": [
                    "email",
                  ],
                  "type": "object",
                },
                "type": "array",
              },
              "fax": {
                "example": "+12129876543",
                "nullable": true,
                "type": "string",
              },
              "id": {
                "example": "12345",
                "readOnly": true,
                "type": "string",
              },
              "image_url": {
                "example": "https://www.spacex.com/static/images/share.jpg",
                "nullable": true,
                "type": "string",
              },
              "interaction_count": {
                "example": 1,
                "nullable": true,
                "readOnly": true,
                "type": "integer",
              },
              "name": {
                "example": "Copper",
                "minLength": 1,
                "type": "string",
              },
              "owner_id": {
                "example": "12345",
                "type": "string",
              },
              "phone_numbers": {
                "items": {
                  "properties": {
                    "id": {
                      "example": "12345",
                      "nullable": true,
                      "type": "string",
                    },
                    "number": {
                      "example": "111-111-1111",
                      "minLength": 1,
                      "type": "string",
                    },
                    "type": {
                      "enum": [
                        "primary",
                        "secondary",
                        "home",
                        "office",
                        "mobile",
                        "assistant",
                        "fax",
                        "other",
                      ],
                      "example": "primary",
                      "type": "string",
                      "x-graphql-type-name": "PhoneType",
                    },
                  },
                  "required": [
                    "number",
                  ],
                  "type": "object",
                },
                "type": "array",
              },
              "social_links": {
                "items": {
                  "properties": {
                    "id": {
                      "example": "12345",
                      "nullable": true,
                      "type": "string",
                    },
                    "type": {
                      "example": "twitter",
                      "nullable": true,
                      "type": "string",
                    },
                    "url": {
                      "example": "https://www.twitter.com/apideck-io",
                      "minLength": 1,
                      "type": "string",
                    },
                  },
                  "required": [
                    "url",
                  ],
                  "type": "object",
                },
                "type": "array",
              },
              "status": {
                "example": "Open",
                "minLength": 1,
                "nullable": true,
                "type": "string",
              },
              "tags": {
                "example": [
                  "New",
                ],
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "updated_at": {
                "example": "2020-09-30T07:43:32.000Z",
                "readOnly": true,
                "type": "string",
              },
              "updated_by": {
                "example": "12345",
                "nullable": true,
                "readOnly": true,
                "type": "string",
              },
              "vat_number": {
                "description": "VAT number",
                "example": "BE0689615164",
                "nullable": true,
                "type": "string",
              },
              "websites": {
                "items": {
                  "properties": {
                    "id": {
                      "example": "12345",
                      "nullable": true,
                      "type": "string",
                    },
                    "type": {
                      "enum": [
                        "primary",
                        "secondary",
                        "work",
                        "personal",
                        "other",
                      ],
                      "example": "primary",
                      "type": "string",
                      "x-graphql-type-name": "WebsiteType",
                    },
                    "url": {
                      "example": "http://example.com",
                      "minLength": 1,
                      "type": "string",
                    },
                  },
                  "required": [
                    "url",
                  ],
                  "type": "object",
                },
                "type": "array",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
      },
      "required": true,
    },
    "responses": {
      "201": {
        "content": {
          "application/json": {
            "schema": {
              "properties": {
                "data": {
                  "properties": {
                    "id": {
                      "example": "12345",
                      "readOnly": true,
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                  ],
                  "title": "UnifiedId",
                },
                "operation": {
                  "description": "Operation performed",
                  "example": "one",
                  "type": "string",
                },
                "resource": {
                  "description": "Unified API resource name",
                  "example": "companies",
                  "type": "string",
                },
                "service": {
                  "description": "Apideck ID of service provider",
                  "example": "zoho-crm",
                  "type": "string",
                },
                "status": {
                  "description": "HTTP Response Status",
                  "example": "OK",
                  "type": "string",
                },
                "status_code": {
                  "description": "HTTP Response Status Code",
                  "example": 200,
                  "type": "integer",
                },
              },
              "required": [
                "status_code",
                "status",
                "service",
                "resource",
                "operation",
                "data",
              ],
              "type": "object",
            },
          },
        },
        "description": "Company created",
      },
      "400": {
        "content": {
          "application/json": {
            "schema": {
              "properties": {
                "detail": {
                  "anyOf": [
                    {
                      "example": "Missing property foobar",
                      "type": "string",
                    },
                    {
                      "example": {
                        "missing": [
                          [
                            {
                              "foobar": "required",
                            },
                          ],
                        ],
                      },
                      "type": "object",
                    },
                  ],
                  "description": "Contains parameter or domain specific information related to the error and why it occured.",
                },
                "error": {
                  "description": "Contains an explanation of the status_code as defined in HTTP/1.1 standard (RFC 7231)",
                  "example": "Bad Request",
                  "type": "string",
                },
                "message": {
                  "description": "A human-readable message providing more details about the error.",
                  "example": "Invalid Params",
                  "type": "string",
                },
                "ref": {
                  "description": "Link to documentation of error type",
                  "example": "https://developers.apideck.com/errors#requestbodyvalidationerror",
                  "type": "string",
                },
                "status_code": {
                  "description": "HTTP status code",
                  "example": 400,
                  "type": "number",
                },
                "typeName": {
                  "description": "The type of error returned",
                  "example": "RequestHeadersValidationError",
                  "type": "string",
                },
              },
            },
          },
        },
        "description": "Bad Request",
      },
      "401": {
        "content": {
          "application/json": {
            "schema": {
              "properties": {
                "detail": {
                  "description": "Contains parameter or domain specific information related to the error and why it occured.",
                  "example": "Failed to generate valid JWT Session. Verify applicationId is correct",
                  "type": "string",
                },
                "error": {
                  "description": "Contains an explanation of the status_code as defined in HTTP/1.1 standard (RFC 7231)",
                  "example": "Unauthorized",
                  "type": "string",
                },
                "message": {
                  "description": "A human-readable message providing more details about the error.",
                  "example": "Unauthorized Request",
                  "type": "string",
                },
                "ref": {
                  "description": "Link to documentation of error type",
                  "example": "https://developers.apideck.com/errors#unauthorizederror",
                  "type": "string",
                },
                "status_code": {
                  "description": "HTTP status code",
                  "example": 401,
                  "type": "number",
                },
                "typeName": {
                  "description": "The type of error returned",
                  "example": "UnauthorizedError",
                  "type": "string",
                },
              },
            },
          },
        },
        "description": "Unauthorized",
      },
      "402": {
        "content": {
          "application/json": {
            "schema": {
              "properties": {
                "detail": {
                  "description": "Contains parameter or domain specific information related to the error and why it occured.",
                  "example": "You have reached your limit of 2000",
                  "type": "string",
                },
                "error": {
                  "description": "Contains an explanation of the status_code as defined in HTTP/1.1 standard (RFC 7231)",
                  "example": "Payment Required",
                  "type": "string",
                },
                "message": {
                  "description": "A human-readable message providing more details about the error.",
                  "example": "Request Limit Reached",
                  "type": "string",
                },
                "ref": {
                  "description": "Link to documentation of error type",
                  "example": "https://developers.apideck.com/errors#requestlimiterror",
                  "type": "string",
                },
                "status_code": {
                  "description": "HTTP status code",
                  "example": 402,
                  "type": "number",
                },
                "typeName": {
                  "description": "The type of error returned",
                  "example": "RequestLimitError",
                  "type": "string",
                },
              },
            },
          },
        },
        "description": "Payment Required",
      },
      "404": {
        "content": {
          "application/json": {
            "schema": {
              "properties": {
                "detail": {
                  "anyOf": [
                    {
                      "example": "Could not find widget with id: '123'",
                      "type": "string",
                    },
                    {
                      "example": {
                        "not_found": {
                          "entity": "widget",
                          "id": "123",
                        },
                      },
                      "type": "object",
                    },
                  ],
                  "description": "Contains parameter or domain specific information related to the error and why it occured.",
                },
                "error": {
                  "description": "Contains an explanation of the status_code as defined in HTTP/1.1 standard (RFC 7231)",
                  "example": "Not Found",
                  "type": "string",
                },
                "message": {
                  "description": "A human-readable message providing more details about the error.",
                  "example": "Unknown Widget",
                  "type": "string",
                },
                "ref": {
                  "description": "Link to documentation of error type",
                  "example": "https://developers.apideck.com/errors#entitynotfounderror",
                  "type": "string",
                },
                "status_code": {
                  "description": "HTTP status code",
                  "example": 404,
                  "type": "number",
                },
                "typeName": {
                  "description": "The type of error returned",
                  "example": "EntityNotFoundError",
                  "type": "string",
                },
              },
            },
          },
        },
        "description": "The specified resource was not found",
      },
      "422": {
        "content": {
          "application/json": {
            "schema": {
              "properties": {
                "detail": {
                  "description": "Contains parameter or domain specific information related to the error and why it occured.",
                  "example": "State did not include unified_api",
                  "type": "string",
                },
                "error": {
                  "description": "Contains an explanation of the status_code as defined in HTTP/1.1 standard (RFC 7231)",
                  "example": "Unprocessable Entity",
                  "type": "string",
                },
                "message": {
                  "description": "A human-readable message providing more details about the error.",
                  "example": "Invalid State",
                  "type": "string",
                },
                "ref": {
                  "description": "Link to documentation of error type",
                  "example": "https://developers.apideck.com/errors#invalidstateerror",
                  "type": "string",
                },
                "status_code": {
                  "description": "HTTP status code",
                  "example": 422,
                  "type": "number",
                },
                "typeName": {
                  "description": "The type of error returned",
                  "example": "InvalidStateError",
                  "type": "string",
                },
              },
            },
          },
        },
        "description": "Unprocessable",
      },
      "default": {
        "content": {
          "application/json": {
            "schema": {
              "properties": {
                "detail": {
                  "anyOf": [
                    {
                      "example": "Missing Header: x-apideck-consumer-id",
                      "type": "string",
                    },
                    {
                      "example": {
                        "missing": [
                          [
                            {
                              "x-apideck-consumer-id": "required",
                            },
                          ],
                        ],
                      },
                      "type": "object",
                    },
                  ],
                  "description": "Contains parameter or domain specific information related to the error and why it occured.",
                },
                "error": {
                  "description": "Contains an explanation of the status_code as defined in HTTP/1.1 standard (RFC 7231)",
                  "example": "Bad Request",
                  "type": "string",
                },
                "message": {
                  "description": "A human-readable message providing more details about the error.",
                  "example": "Invalid Params",
                  "type": "string",
                },
                "ref": {
                  "description": "Link to documentation of error type",
                  "example": "https://developers.apideck.com/errors#unauthorizederror",
                  "type": "string",
                },
                "status_code": {
                  "description": "HTTP status code",
                  "example": 400,
                  "type": "number",
                },
                "typeName": {
                  "description": "The type of error returned",
                  "example": "RequestHeadersValidationError",
                  "type": "string",
                },
              },
            },
          },
        },
        "description": "Unexpected error",
      },
    },
    "security": [
      {
        "apiKey": [],
      },
    ],
    "summary": "Create company",
    "tags": [
      "Companies",
    ],
  },
  "tags": [
    "Companies",
  ],
}
`;
